--- a/contact.html
+++ b/contact.html
@@ -132,9 +132,9 @@
           </div>
           <div class="info">
             <h3>John Smith</h3>
-            <p>Title: Senior Marketing Manager</p>
-            <p>Email: contact@example.com</p>
-            <p>Message: The agency makes the shopping easier</p>
+            <p><span>Title:</span> Senior Marketing Manager</p>
+            <p><span>Email:</span> contact@example.com</p>
+            <p><span>Message:</span> The agency makes the shopping easier</p>
           </div>
         </div>
       </div>
